--- a/Fanner/Splash.storyboard
+++ b/Fanner/Splash.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jef-xp-HVe">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Splash View Controller-->
         <scene sceneID="0ee-OZ-z7D">
             <objects>
-                <viewController id="LUG-7y-eMK" sceneMemberID="viewController">
+                <viewController id="LUG-7y-eMK" customClass="SplashViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8Fc-U9-NYY"/>
                         <viewControllerLayoutGuide type="bottom" id="85H-d6-2gt"/>
@@ -20,26 +20,26 @@
                     </view>
                     <navigationItem key="navigationItem" id="wa4-XJ-ccw"/>
                     <connections>
-                        <segue destination="dCU-ju-DeS" kind="presentation" identifier="Main" id="fIe-9v-cH3"/>
+                        <segue destination="dCU-ju-DeS" kind="presentation" identifier="MainSegue" id="fIe-9v-cH3"/>
                         <segue destination="4sz-ah-iPW" kind="presentation" identifier="LoginSegue" id="ccH-cw-R3C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HZ6-wt-UjG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1142" y="411"/>
+            <point key="canvasLocation" x="990" y="411"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--Main-->
         <scene sceneID="7gx-Sj-8hT">
             <objects>
-                <viewControllerPlaceholder id="dCU-ju-DeS" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Main" id="dCU-ju-DeS" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WcN-gp-wNM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1761.5" y="247"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--Login-->
         <scene sceneID="8an-W9-t3b">
             <objects>
-                <viewControllerPlaceholder id="4sz-ah-iPW" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Login" id="4sz-ah-iPW" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="50c-LA-ssh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1761.5" y="541"/>
