--- a/Fanner/Login.storyboard
+++ b/Fanner/Login.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZI3-fR-q7G">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="XwX-tk-G7R">
             <objects>
-                <viewController id="2QZ-3I-YWR" sceneMemberID="viewController">
+                <viewController id="2QZ-3I-YWR" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YDT-mN-AlM"/>
                         <viewControllerLayoutGuide type="bottom" id="n44-CG-ciM"/>
@@ -40,8 +40,16 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="X73-yq-VB3">
-                        <barButtonItem key="leftBarButtonItem" title="取消" id="4hs-UW-4sJ"/>
-                        <barButtonItem key="rightBarButtonItem" title="登录" id="oBF-Y5-mHT"/>
+                        <barButtonItem key="leftBarButtonItem" title="取消" id="4hs-UW-4sJ">
+                            <connections>
+                                <action selector="cancel:" destination="2QZ-3I-YWR" id="VNu-di-K5d"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="登录" id="oBF-Y5-mHT">
+                            <connections>
+                                <action selector="login:" destination="2QZ-3I-YWR" id="CSQ-ke-ppA"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j8V-TZ-D6y" userLabel="First Responder" sceneMemberID="firstResponder"/>
