--- a/Fanner/Accounts.storyboard
+++ b/Fanner/Accounts.storyboard
@@ -1,26 +1,71 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ODq-AR-uOu">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--账号-->
         <scene sceneID="2b0-wF-vWU">
             <objects>
                 <tableViewController id="BGl-xG-ooL" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="sck-MD-oQL">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="103" sectionHeaderHeight="28" sectionFooterHeight="28" id="sck-MD-oQL">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="dRH-kD-G0R">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="103" id="dRH-kD-G0R" customClass="UserTableViewCell">
+                                <rect key="frame" x="0.0" y="92" width="600" height="103"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dRH-kD-G0R" id="37U-wT-fyM">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JYv-DI-Sx0">
+                                            <rect key="frame" x="18" y="21" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="ghT-T4-Odv"/>
+                                                <constraint firstAttribute="width" constant="60" id="hHj-c7-rU0"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qec-zz-eGo">
+                                            <rect key="frame" x="18" y="21" width="60" height="60"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EdI-g8-JeM">
+                                            <rect key="frame" x="88" y="8" width="504" height="29"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vtw-im-6ft">
+                                            <rect key="frame" x="88" y="70" width="504" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <color key="textColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Qec-zz-eGo" firstAttribute="trailing" secondItem="JYv-DI-Sx0" secondAttribute="trailing" id="2zo-wb-1dX"/>
+                                        <constraint firstItem="Vtw-im-6ft" firstAttribute="leading" secondItem="EdI-g8-JeM" secondAttribute="leading" id="45R-P5-qdG"/>
+                                        <constraint firstItem="JYv-DI-Sx0" firstAttribute="leading" secondItem="37U-wT-fyM" secondAttribute="leadingMargin" constant="10" id="HJa-gg-qTq"/>
+                                        <constraint firstItem="EdI-g8-JeM" firstAttribute="top" secondItem="37U-wT-fyM" secondAttribute="topMargin" id="Jhw-52-Af4"/>
+                                        <constraint firstItem="Qec-zz-eGo" firstAttribute="top" secondItem="JYv-DI-Sx0" secondAttribute="top" id="LX4-Gc-aoZ"/>
+                                        <constraint firstItem="EdI-g8-JeM" firstAttribute="leading" secondItem="Qec-zz-eGo" secondAttribute="trailing" constant="10" id="RBH-zk-N4j"/>
+                                        <constraint firstItem="JYv-DI-Sx0" firstAttribute="centerY" secondItem="37U-wT-fyM" secondAttribute="centerY" id="TYm-tL-wCL"/>
+                                        <constraint firstItem="Vtw-im-6ft" firstAttribute="trailing" secondItem="EdI-g8-JeM" secondAttribute="trailing" id="Vtt-gR-l65"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Vtw-im-6ft" secondAttribute="bottom" id="cs4-5i-W93"/>
+                                        <constraint firstItem="Qec-zz-eGo" firstAttribute="leading" secondItem="JYv-DI-Sx0" secondAttribute="leading" id="dWN-1f-i1a"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="EdI-g8-JeM" secondAttribute="trailing" id="scU-js-fxL"/>
+                                        <constraint firstItem="Qec-zz-eGo" firstAttribute="bottom" secondItem="JYv-DI-Sx0" secondAttribute="bottom" id="yG2-xT-Z9P"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="iconImageView" destination="JYv-DI-Sx0" id="gUa-Na-a50"/>
+                                    <outlet property="idLabel" destination="Vtw-im-6ft" id="ZgM-Ee-Fa4"/>
+                                    <outlet property="nameLabel" destination="EdI-g8-JeM" id="Kmd-t3-ixB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -28,7 +73,10 @@
                             <outlet property="delegate" destination="BGl-xG-ooL" id="PxI-gb-BKH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="3lk-OJ-kiM"/>
+                    <navigationItem key="navigationItem" title="账号" id="3lk-OJ-kiM">
+                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="yvW-nz-myq"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="PGa-RP-ETx"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wrg-Wf-oPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
