--- a/Fanner/TimeLineTableViewCell.xib
+++ b/Fanner/TimeLineTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TLCell" rowHeight="155" id="KGk-i7-Jjw" customClass="TimeLineTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="376" height="155"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TLCell" rowHeight="359" id="KGk-i7-Jjw" customClass="TimeLineTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="376" height="359"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="376" height="154"/>
+                <rect key="frame" x="0.0" y="0.0" width="376" height="358"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GQI-yg-1Fs">
@@ -31,38 +31,59 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixf-lo-sPh">
                         <rect key="frame" x="76" y="8" width="282" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgJ-bD-cEG">
-                        <rect key="frame" x="8" y="78" width="360" height="68"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgJ-bD-cEG" userLabel="2">
+                        <rect key="frame" x="8" y="78" width="360" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="360" placeholderIntrinsicHeight="164" translatesAutoresizingMaskIntoConstraints="NO" id="f8s-sV-5hj" userLabel="3">
+                        <rect key="frame" x="8" y="109" width="360" height="241"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
+                        </accessibility>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="360" placeholderIntrinsicHeight="241" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hv-7n-FLy" userLabel="4">
+                        <rect key="frame" x="8" y="109" width="360" height="241"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <action selector="showLargePhoto:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="5Hg-sn-xbk"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="GQI-yg-1Fs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="0LH-vc-Ews"/>
                     <constraint firstItem="GQI-yg-1Fs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="1Ql-Si-O9N"/>
                     <constraint firstItem="Mfe-w7-84c" firstAttribute="leading" secondItem="ixf-lo-sPh" secondAttribute="leading" id="2LJ-4a-i5M"/>
+                    <constraint firstItem="f8s-sV-5hj" firstAttribute="bottom" secondItem="3hv-7n-FLy" secondAttribute="bottom" id="5JG-S0-imh"/>
                     <constraint firstItem="ixf-lo-sPh" firstAttribute="top" secondItem="GQI-yg-1Fs" secondAttribute="top" id="Nld-kG-qcv"/>
                     <constraint firstItem="Mfe-w7-84c" firstAttribute="bottom" secondItem="GQI-yg-1Fs" secondAttribute="bottom" id="Onn-my-KIF"/>
+                    <constraint firstItem="f8s-sV-5hj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="OrS-qO-OYm"/>
                     <constraint firstItem="ixf-lo-sPh" firstAttribute="leading" secondItem="GQI-yg-1Fs" secondAttribute="trailing" constant="8" id="Ow5-eT-lot"/>
                     <constraint firstAttribute="trailingMargin" secondItem="ixf-lo-sPh" secondAttribute="trailing" constant="10" id="QDf-IP-NbH"/>
                     <constraint firstItem="hgJ-bD-cEG" firstAttribute="top" secondItem="GQI-yg-1Fs" secondAttribute="bottom" constant="10" id="YOu-41-U6j"/>
+                    <constraint firstItem="3hv-7n-FLy" firstAttribute="trailing" secondItem="f8s-sV-5hj" secondAttribute="trailing" id="bwE-Ug-I5z"/>
+                    <constraint firstItem="f8s-sV-5hj" firstAttribute="leading" secondItem="3hv-7n-FLy" secondAttribute="leading" id="dX9-29-lhp"/>
+                    <constraint firstItem="f8s-sV-5hj" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="eDm-uU-fTF"/>
                     <constraint firstItem="GQI-yg-1Fs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="fbQ-cj-cMm"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="f8s-sV-5hj" secondAttribute="bottom" id="hhC-kQ-Wgf"/>
                     <constraint firstAttribute="trailingMargin" secondItem="hgJ-bD-cEG" secondAttribute="trailing" id="mQL-Ja-1Kv"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="hgJ-bD-cEG" secondAttribute="bottom" id="rGa-55-WyL"/>
+                    <constraint firstItem="f8s-sV-5hj" firstAttribute="top" secondItem="3hv-7n-FLy" secondAttribute="top" id="sy1-Tc-dv2"/>
                     <constraint firstItem="hgJ-bD-cEG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="urK-7S-027"/>
+                    <constraint firstItem="f8s-sV-5hj" firstAttribute="top" secondItem="hgJ-bD-cEG" secondAttribute="bottom" constant="10" id="xZi-eM-Gdt"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentLabel" destination="hgJ-bD-cEG" id="VCD-9g-T4l"/>
                 <outlet property="iconImage" destination="GQI-yg-1Fs" id="ayk-v4-n1y"/>
                 <outlet property="nameLabel" destination="ixf-lo-sPh" id="1fy-at-q2u"/>
+                <outlet property="photoImageView" destination="f8s-sV-5hj" id="2E9-az-jhN"/>
                 <outlet property="publishLabel" destination="Mfe-w7-84c" id="QTi-za-a1E"/>
             </connections>
-            <point key="canvasLocation" x="286" y="236.5"/>
+            <point key="canvasLocation" x="286" y="338.5"/>
         </tableViewCell>
     </objects>
 </document>
